fixed table header static & solved overlaping issue

--- a/src/assets/css/conflictRemove.css
+++ b/src/assets/css/conflictRemove.css
@@ -14,7 +14,7 @@ input#input {
   min-height: 0px !important;
 }
 .MuiToolbar-root.MuiToolbar-regular.MuiToolbar-gutters {
-  box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0), 0px 1px 10px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0), 0px 1px 10px 0px rgba(0, 0, 0, 0) !important;
 }
 .MuiContainer-root.AppRouterConnect-container-5 {
   background: white !important;
@@ -84,6 +84,7 @@ span.MuiIconButton-label {
   justify-content: space-between;
   padding-left: 25px;
   padding-right: 40px;
+  position: relative !important;
 }
 input.MuiInputBase-input.makeStyles-inputInput-124 {
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
@@ -343,6 +344,7 @@ label.MuiFormControlLabel-root {
 .Mui-focused fieldset {
   border: 2px solid green !important;
 }
+ 
 
 @media only screen and (max-width: 600px) {
   .MuiToolbar-root.MuiToolbar-regular.MuiToolbar-gutters {
