--- a/src/components/Calendar/style.scss
+++ b/src/components/Calendar/style.scss
@@ -236,6 +236,9 @@ table.MuiTable-root{
 .PrivateTabScrollButton-root {
   width: 0px !important;
 }
-main.makeStyles-mainWrapper-196{
-  margin-top: 40px !important;
+main.makeStyles-mainWrapper,.MuiPaper-root.MuiPaper-elevation1{
+  margin-top: 50px !important;
+}
+.header.row.flex-middle{
+  margin-top: 30px !important;
 }
